@@ -5,7 +5,6 @@
  */
 package dan200.computercraft;
 
-import dan200.computercraft.api.turtle.event.TurtleAction;
 import dan200.computercraft.core.apis.http.options.Action;
 import dan200.computercraft.core.apis.http.options.AddressRule;
 import dan200.computercraft.shared.Config;
@@ -13,16 +12,10 @@ import dan200.computercraft.shared.Registry;
 import dan200.computercraft.shared.computer.core.ClientComputerRegistry;
 import dan200.computercraft.shared.computer.core.ServerComputerRegistry;
 import dan200.computercraft.shared.peripheral.monitor.MonitorRenderer;
-import dan200.computercraft.shared.pocket.peripherals.PocketModem;
-import dan200.computercraft.shared.pocket.peripherals.PocketSpeaker;
-import dan200.computercraft.shared.turtle.upgrades.*;
 import net.minecraftforge.fml.common.Mod;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.EnumSet;
 import java.util.List;
 import java.util.concurrent.TimeUnit;
 
@@ -45,10 +38,10 @@ public final class ComputerCraft
 
     public static boolean httpEnabled = true;
     public static boolean httpWebsocketEnabled = true;
-    public static List<AddressRule> httpRules = Collections.unmodifiableList( Arrays.asList(
+    public static List<AddressRule> httpRules = List.of(
         AddressRule.parse( "$private", null, Action.DENY.toPartial() ),
         AddressRule.parse( "*", null, Action.ALLOW.toPartial() )
-    ) );
+    );
 
     public static int httpMaxRequests = 16;
     public static int httpMaxWebsockets = 4;
@@ -62,7 +55,7 @@ public final class ComputerCraft
     public static int modemHighAltitudeRangeDuringStorm = 384;
     public static int maxNotesPerTick = 8;
     public static MonitorRenderer monitorRenderer = MonitorRenderer.BEST;
-    public static double monitorDistanceSq = 4096;
+    public static int monitorDistance = 65;
     public static long monitorBandwidth = 1_000_000;
 
     public static boolean turtlesNeedFuel = true;
@@ -70,7 +63,6 @@ public final class ComputerCraft
     public static int advancedTurtleFuelLimit = 100000;
     public static boolean turtlesObeyBlockProtection = true;
     public static boolean turtlesCanPush = true;
-    public static EnumSet<TurtleAction> turtleDisabledActions = EnumSet.noneOf( TurtleAction.class );
 
     public static int computerTermWidth = 51;
     public static int computerTermHeight = 19;
@@ -83,27 +75,6 @@ public final class ComputerCraft
 
     public static int monitorWidth = 8;
     public static int monitorHeight = 6;
-
-    public static final class TurtleUpgrades
-    {
-        public static TurtleModem wirelessModemNormal;
-        public static TurtleModem wirelessModemAdvanced;
-        public static TurtleSpeaker speaker;
-
-        public static TurtleCraftingTable craftingTable;
-        public static TurtleSword diamondSword;
-        public static TurtleShovel diamondShovel;
-        public static TurtleTool diamondPickaxe;
-        public static TurtleAxe diamondAxe;
-        public static TurtleHoe diamondHoe;
-    }
-
-    public static final class PocketUpgrades
-    {
-        public static PocketModem wirelessModemNormal;
-        public static PocketModem wirelessModemAdvanced;
-        public static PocketSpeaker speaker;
-    }
 
     // Registries
     public static final ClientComputerRegistry clientComputerRegistry = new ClientComputerRegistry();
